--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
       "jsx-a11y/role-has-required-aria-props": 2,
       "jsx-a11y/role-supports-aria-props": 2,
       "max-len": 0,
+      "new-cap": [2, {
+        "capIsNewExceptions": ["Immutable", "Map", "List", "Record", "OrderedMap"]
+        }],
       "newline-per-chained-call": 0,
       "no-console": 1,
       "no-use-before-define": 0,
@@ -188,6 +191,7 @@
     "ip": "1.1.3",
     "lodash": "4.14.1",
     "node-uuid": "^1.4.7",
+    "normalizr": "^2.2.1",
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "react-helmet": "3.1.0",
