--- a/package.json
+++ b/package.json
@@ -123,9 +123,20 @@
       "jsx-a11y/role-has-required-aria-props": 2,
       "jsx-a11y/role-supports-aria-props": 2,
       "max-len": 0,
-      "new-cap": [2, {
-        "capIsNewExceptions": ["Immutable", "Map", "List", "Record", "OrderedMap"]
-        }],
+      "new-cap": [
+        2,
+        {
+          "capIsNewExceptions": [
+            "Immutable",
+            "Map",
+            "List",
+            "Record",
+            "OrderedMap",
+            "Router",
+            "Schema"
+          ]
+        }
+      ],
       "newline-per-chained-call": 0,
       "no-console": 1,
       "no-use-before-define": 0,
@@ -190,6 +201,9 @@
     "invariant": "^2.2.1",
     "ip": "1.1.3",
     "lodash": "4.14.1",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.5.8",
+    "node-restful": "^0.2.5",
     "node-uuid": "^1.4.7",
     "normalizr": "^2.2.1",
     "react": "15.3.0",
