Change node-restful to own fork and add readme stub

--- a/package.json
+++ b/package.json
@@ -203,7 +203,7 @@
     "lodash": "4.14.1",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.8",
-    "node-restful": "^0.2.5",
+    "node-restful": "git+ssh://git@github.com/pavlin-policar/node-restful.git",
     "node-uuid": "^1.4.7",
     "normalizr": "^2.2.1",
     "react": "15.3.0",
