--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.9.1",
+    "bson-objectid": "^1.1.4",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "express": "4.14.0",
@@ -203,7 +204,7 @@
     "lodash": "4.14.1",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.8",
-    "node-restful": "git+https://git@github.com/pavlin-policar/node-restful.git",
+    "node-restful": "^0.2.5",
     "node-uuid": "^1.4.7",
     "normalizr": "^2.2.1",
     "react": "15.3.0",
