--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development node server",
+    "start": "cross-env NODE_ENV=development babel-node server --presets es2015",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -192,6 +192,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.9.1",
+    "bcrypt": "^0.8.7",
     "bson-objectid": "^1.1.4",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -202,6 +203,7 @@
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "4.15.0",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.8",
