--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "bcrypt": "^0.8.7",
     "bson-objectid": "^1.1.4",
     "chalk": "1.1.3",
+    "classnames": "^2.2.5",
     "compression": "1.6.2",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.1",
