--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "redux-saga": "0.11.0",
     "reselect": "2.5.3",
     "sanitize.css": "4.1.0",
+    "validator": "^5.5.0",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
   },
