--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "engines": {
-    "npm": ">=3"
+    "npm": ">=3",
+    "node": ">=6"
   },
   "author": "Pavlin Poličar <pavlin.g.p@gmail.com>",
   "license": "MIT",
@@ -19,8 +20,7 @@
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "npm run start:production",
-    "start:develop": "cross-env NODE_ENV=development node server",
+    "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -194,7 +194,6 @@
   "dependencies": {
     "@policar/react-redux-form": "*",
     "babel-polyfill": "6.9.1",
-    "bcrypt": "^0.8.7",
     "bson-objectid": "^1.1.4",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
@@ -206,12 +205,7 @@
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
-    "jsonwebtoken": "^7.1.9",
     "lodash": "4.15.0",
-    "method-override": "^2.3.6",
-    "mongoose": "^4.5.8",
-    "node-restful": "^0.2.5",
-    "node-uuid": "^1.4.7",
     "normalizr": "^2.2.1",
     "react": "15.3.0",
     "react-dom": "15.3.0",
