--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "jwt-decode": "^2.1.0",
     "lodash": "4.15.0",
     "normalizr": "^2.2.1",
     "react": "15.3.0",
